--- a/Guvercin.ipynb
+++ b/Guvercin.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNNInD2EL3Dxz2y5GTp62o+",
+      "authorship_tag": "ABX9TyM8bjbeBqRp/n9kDuOOWFhE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,21 +27,31 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Güvercin yuvası ilkesi, genellikle matematik ve bilgisayar bilimlerinde kullanılan bir prensiptir. İlke, eğer n öğeyi m kutuya koyarsak ve >\n",
+        "n>m ise, en az bir kutunun birden fazla öğe içermesi gerektiğini belirtir. Bu ilke, çeşitli algoritmalarda ve problemlerde kullanılabilir."
+      ],
+      "metadata": {
+        "id": "435llM9VOc8t"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "2pFLuSyYMaAy",
-        "outputId": "5d40b9f1-97d5-4e54-af05-05ebbf2a9666"
+        "outputId": "b168f9b2-c774-48ea-ebd3-78135572eb73"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Aynı günde doğan ilk insanları bulmak için 28 kişiye ihtiyaç vardı.\n"
+            "Aynı günde doğan ilk insanları bulmak için 53 kişiye ihtiyaç vardı.\n"
           ]
         }
       ],
